# ozon_mobile_version_parser

./: .gitignore  README.MD  pyproject.toml
ozon_phones/: items.jsonl  main.py  scrapy.cfg
ozon_phones/analyze/: main.py
ozon_phones/ozon_phones/: custom_request.py  errors.py  items.py  pipelines.py  selenium_request.py  settings.py
ozon_phones/ozon_phones/html_selectors/: __init__.py  android_version_selector.py  card_href_selector.py  mobile_name_selector.py  mobile_type.py  version_selector.py
ozon_phones/ozon_phones/middlewares/: __init__.py  builtin.py  from_file_middleware.py  selenium_middlware.py
ozon_phones/ozon_phones/spiders/: ozon_phone_spider.py
